[package]
name = "ohelpers_proc_macros"
authors = ["orgrinrt", "Hiisi Digital"]
version = "0.1.0"
edition = "2021"

[features]
default = []
debug_file = []

[dependencies]
debug_helpers = { path = "../debug_helpers" }
derive_display = { path = "../derive_display" }
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
quote = "1.0.9"
paste = "1.0.14"
proc-macro2 = { version = "1.0.78", features = [] }
proc-macro-crate = "3.1.0"
lazy_static = "1.4.0"
